# service-status-specs/src/main/resources/api-spec.yaml
@@ -157,7 +157,7 @@ paths:
           required: true
           type: string
           format: uuid
-        - name: incident
+        - name: newIncident
           in: body
           description: Incident object to be added to the status page
           required: true
@@ -174,16 +174,16 @@ paths:
     post:
       tags:
         - Incident
-      summary: Add an update to an incident
+      summary: Add an update to an incidentUpdates
       operationId: addIncidentUpdate
       consumes:
         - application/json
       parameters:
         - name: incidentUpdate
           in: body
-          description: Incident update to be added to the incident
+          description: Incident update to be added to the incidentUpdates
           required: true
-          schema: 
+          schema:
             $ref: '#/definitions/IncidentUpdate'
         - name: id
           in: path
@@ -193,7 +193,7 @@ paths:
           format: uuid
         - name: incidentId
           in: path
-          description: ID of the incident to update
+          description: ID of the incidentUpdates to update
           required: true
           type: string
           format: uuid
@@ -207,14 +207,26 @@ paths:
     get:
       tags:
         - Incident
-      summary: Get details of an incident
+      summary: Get details of an incidentUpdates
       operationId: getIncidentDetails
       produces:
         - application/json
       parameters:
+        - name: id
+          in: path
+          description: ID of the service
+          required: true
+          type: string
+          format: uuid
+        - name: incidentId
+          in: path
+          description: ID of the incidentUpdates to update
+          required: true
+          type: string
+          format: uuid
       responses:
         '200':
-          description: Return the incident
+          description: Return the incidentUpdates
           schema:
               $ref: '#/definitions/Incident'
         '404':
